--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mjs-toolbar",
+  "name": "@markerjs/mjs-toolbar",
   "version": "0.2.1",
   "description": "MJS Toolbar",
   "main": "mjs-toolbar.js",
